*Empty MediaWiki Message*

--- a/Template:Kapampangan_article_stub.mw
+++ b/Template:Kapampangan_article_stub.mw
@@ -1,1 +1,1 @@
-<div class="boilerplate" id="stub">[[Image:Kapamp2d.png|15px| ]]&nbsp;''Ing artikulung iti tungkul  king tau, lugal o bageng maki kaugnayan king Kapampangan metung yang [[Wikipedia:Suli|suli]]. Maliari kang  [[Wikipedia:Find_or_fix_a_stub|sumaup]] keng Wikipedia kapamilatan ning [{{SERVER}}{{localurl:{{NAMESPACE}}:{{PAGENAME}}|action=edit}} pamandagdag o pamisusug kaniti].''</div>[[Category:Kapampangan article stubs]]
+<div class="boilerplate" id="stub">[[Image:Kapamp2c.png|15px| ]]&nbsp;''Ing artikulung iti tungkul  king tau, lugal o bageng maki kaugnayan king Kapampangan metung yang [[Wikipedia:Suli|suli]]. Maliari kang  [[Wikipedia:Find_or_fix_a_stub|sumaup]] keng Wikipedia kapamilatan ning [{{SERVER}}{{localurl:{{NAMESPACE}}:{{PAGENAME}}|action=edit}} pamandagdag o pamisusug kaniti].''</div>[[Category:Kapampangan article stubs]]
