*Empty MediaWiki Message*

--- a/Superbrands.mw
+++ b/Superbrands.mw
@@ -1,4 +1,4 @@
-[[Image:Superbrands.jpg|right]]
+[[Image:Superbrands-logo.jpg|200px|right]]
 
 Ing aguman or organisasyon a '''Superbrands''' [[Organization#Committees or juries|organization]] timawa yang talapamilatan  (''independent arbiter'') kareng etiketa o marka (''brands''). . Kapamilatan da reng kayang programa king pamakyanib Its (''membership programs'') kikilalanan no reng manimunang etiketa ning yatu, agpang king pamamili da reng ekspertu ampong konsumidor (''consumers''). Maglimbag ya mu namang serye da reng libru ampong publikasyon a makatutuk kareng etiketa. Bukud kaniti, migsadya yang sarili nang programa kareng manimunang merkado ning yatu, at atin yang publikasyon kareng 86 a bangsa.
 
