*Empty MediaWiki Message*

--- a/Template:Portal:Aguman%2FMepiling_artikulu.mw
+++ b/Template:Portal:Aguman%2FMepiling_artikulu.mw
@@ -1,4 +1,4 @@
-[[Image:200px-Pope Benedictus XVI january,20 2006 (7 small).jpg]]]
+[[Image:Pope Benedictus XVI january,20 2006 (7 small).jpg|200px]]
 
 
 Y '''Papa Benedict XVI''' ([[Latin]]: ''Benedictus PP. XVI''; [[Italian language|Italian]]: ''Benedetto XVI''), mibait '''Josef Alois Ratzinger''' inyang [[Abril 16]], [[1927]] king [[Marktl am Inn]], [[Bavaria]], [[Germany]] iya ing pang265 a linukluk a [[Papa]], at pamuntuk ning [[Catholic Church]], at manungkulan bilang [[monarch|Sovereign]] na ning [[Vatican Lakanbalen|Vatican Lakanbalen a State]].<ref>The precise number of popes has been a matter for scholarly debate for centuries. John A. Hardon's ''Modern Catholic Dictionary'' (1980) lists Pope John Paul II (1978&ndash;2005) as 264th Pope, making Benedict XVI the 265th. </ref>  Meyalal ya inyang [[Abril 19]], [[2005]] king [[papal conclave, 2005|papal conclave]], megmasusi ya king kayang [[Papal Inauguration]] [[Mass (Catholic Church)|Mass]] inyang [[Abril 24]], [[2005]], at kinwa ne ing kayang cathedral, ing [[Basilica nang St. John Lateran]], inyang [[Mayu 7]], [[2005]]. Y Papa Benedict XVI atin yang aduang [[citizenship]]  German at Vatican. Elilan ne y [[Papa Juan Pablo II]], a mete inyang [[Abril 2]], [[2005]].   '''[[Papa Benedict XVI|dakal pa ...]]'''
