*Empty MediaWiki Message*

--- a/Template:Portal:Society%2FSelected_article.mw
+++ b/Template:Portal:Society%2FSelected_article.mw
@@ -1,3 +1,3 @@
-[[Image:200px-Pope Benedictus XVI january,20 2006 (7 small).jpg]]]
+[[Image:Pope Benedictus XVI january,20 2006 (7 small).jpg|200px]]
 
 Y '''Papa Benedict XVI''' ([[Latin]]: ''Benedictus PP. XVI''; [[Italian language|Italian]]: ''Benedetto XVI''), mibait '''Josef Alois Ratzinger''' inyang [[Abril 16]], [[1927]] king [[Marktl am Inn]], [[Bavaria]], [[Germany]] iya ing pang265 a linukluk a [[Papa]], at pamuntuk ning [[Catholic Church]], at manungkulan bilang [[monarch|Sovereign]] na ning [[Vatican Lakanbalen|Vatican Lakanbalen a State]].<ref>The precise number of popes has been a matter for scholarly debate for centuries. John A. Hardon's ''Modern Catholic Dictionary'' (1980) lists Pope John Paul II (1978&ndash;2005) as 264th Pope, making Benedict XVI the 265th. '''[[Papa Benedict XVI|dakal pa ...]]'''
