--- a/Miami,_Florida.mw
+++ b/Miami,_Florida.mw
@@ -1,8 +1,6 @@
-{{redirect|Miami}}
-<!-- Infobox starts !-->
 {{Infobox City |official_name = Miami, Florida
 |nickname = [[Magic City|The Magic City]]
-|image_skyline = Miamiskyline20061229.jpg 
+|image_skyline = Miami skyline (1).jpg 
 |image_flag = Flag of Miami, Florida.svg
 |image_seal = Miamiseal.JPG
 |image_map = Map of Florida highlighting Miami.png
