--- a/Uttar_Pradesh.mw
+++ b/Uttar_Pradesh.mw
@@ -73,7 +73,7 @@
 |portal               = Uttar Pradesh
 <!--Seal-->
 |seal                 = Upgovt-logo.jpg
-|seal_caption		 =Seal of Uttar Pradesh Government
+|seal_caption		 =Seal of Uttar Pradesh.jpg
 |seal_size		 =100px
 
 <!--Internal/miscellaneous-->
