*Empty MediaWiki Message*

--- a/Uttar_Pradesh.mw
+++ b/Uttar_Pradesh.mw
@@ -72,8 +72,8 @@
 <!--Portal-->
 |portal               = Uttar Pradesh
 <!--Seal-->
-|seal                 = Upgovt-logo.jpg
-|seal_caption		 =Seal of Uttar Pradesh.jpg
+|seal                 = Seal of Uttar Pradesh.jpg
+|seal_caption		 =Seal of Uttar Pradesh Government
 |seal_size		 =100px
 
 <!--Internal/miscellaneous-->
