*Empty MediaWiki Message*

--- a/Deng_amanung_Awstronesyu.mw
+++ b/Deng_amanung_Awstronesyu.mw
@@ -1,5 +1,5 @@
 [[File:Malayo-Polynesian.svg|300px|thumb|right|Deng bangsang Malayopolinesiu]]
-[[File:738px-Oceanic languages.svg.png|300px|thumb|right|Deng bangsang Osianiku]]
+[[File:Oceanic languages.svg|300px|thumb|right|Deng bangsang Osianiku]]
 
 Deng '''amanung Austronesiu''' metung yang [[mag-anak a amanu]] a makakalat kareng kapulwanan king [[Mauling Aslagang Asia]] ampong [[Pasipiku]], at ating yang aliwang kayabeng gagamitan king mismung kontinente ning [[Asia]].
 
