--- a/Compact_Disc.mw
+++ b/Compact_Disc.mw
@@ -1,7 +1,7 @@
 {{redirect|CD}}
 {{Infobox media
 | name = Compact Disc
-| logo = [[File:CDlogo.svg|150px]]
+| logo = [[File:Compact Disc wordmark.svg|150px]]
 | image =[[File:Compact disc.svg|200px]] 
 | caption = Uling kareng sigi-siging daralanan (''closely spaced tracks'') king dake nang babasan (''readable surface'') ning Compact Disc, mibabaluktut (''[[:en:Diffraction grating|diffract]]'') ya ing sinag ning sala paras king ''[[:en:Visible spectrum|full visible color spectrum]]'' (pangkabilugan a kule ning pinanari)
 | type = [[Optical disc]]
