Replacing Ulysses_Grant_1870-1880.jpg with [[File:Ulysses_S._Grant_1870-1880.jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: name used by reliable sources).

--- a/Ulysses_S._Grant.mw
+++ b/Ulysses_S._Grant.mw
@@ -1,6 +1,6 @@
 {{Infobox_President | name=Ulysses S. Grant
 | nationality=american
-| image=Ulysses Grant 1870-1880.jpg
+| image=Ulysses S. Grant 1870-1880.jpg
 | order=pang18 [[Pamuntuk ning United States]]
 | term_start=[[Marsu 4]], [[1869]]
 | term_end=[[Marsu 4]], [[1877]]
