Reemplacing by free image hosted in Commons

--- a/Alan_Turing.mw
+++ b/Alan_Turing.mw
@@ -1,6 +1,6 @@
 {{Infobox scientist
 | birth_name        = Alan Mathison Turing
-| image             = Alan Turing photo.jpg
+| image             = Alan Turing Aged 16.jpg
 | image_size        = 200px
 | caption           = I Turing anyang panaun a miyalal ya king Fellowship of the [[Royal Society]].
 | birth_date        = {{Birth date|1912|6|23|df=yes}}
