--- a/Template:UAAP.mw
+++ b/Template:UAAP.mw
@@ -1,15 +1,13 @@
 <br clear=all>
-<center>
-{| class="toccolours" cellpadding="3"
+{| class="toccolours" cellpadding="3" style="margin:0 auto"
 |-
 | align="center" style="font-size: 90%;" bgcolor="#FFEFD5"| {{Tnavbar-header| '''[[Ing University Athletics Association of the Philippines]]''' [[UAAP Season 69|Season 69]]|UAAP}}
 |- align="center" style="font-size: 90%;" 
-| ''Seniors:'' &nbsp;&nbsp;{{border|[[Image:Adamson colors.PNG|9px]]}}&nbsp;[[Adamson University|Adamson]] [[Adamson Soaring Falcons|Soaring Falcons]]&nbsp;&nbsp;|&nbsp;&nbsp;{{border|[[Image:Ateneo colors.PNG|9px]]}}&nbsp;[[Ateneo de Manila University|Ateneo]] [[Ateneo Blue Eagles|Blue Eagles]]&nbsp;&nbsp;|&nbsp;&nbsp;{{border|[[Image:FEU colors.PNG|9px]]}}&nbsp;[[Far Eastern University|FEU]] [[FEU Tamaraws|Tamaraws]]<br />&nbsp;&nbsp;&nbsp;{{border|[[Image:NU colors.PNG|9px]]}}&nbsp;[[National University (Philippines)|NU]] [[NU Bulldogs|Bulldogs]]&nbsp;&nbsp;|&nbsp;&nbsp;{{border|[[Image:San Beda colors.PNG|9px]]}}&nbsp;[[University of the East|UE]] [[UE Red Warriors|Red Warriors]]&nbsp;&nbsp;|&nbsp;&nbsp;{{border|[[Image:UP colors.PNG|9px]]}}&nbsp;[[University of the Philippines, Diliman|UP]] [[UP Fighting Maroons|Fighting Maroons]]&nbsp;&nbsp;|&nbsp;&nbsp;{{border|[[Image:UST colors.PNG|9px]]}}&nbsp;[[University of Santo Tomas|UST]] [[UST Growling Tigers|Growling Tigers]]&nbsp;&nbsp;&nbsp;
+| ''Seniors:'' &nbsp;&nbsp;[[Image:Adamson colors.svg|9px|border]]&nbsp;[[Adamson University|Adamson]] [[Adamson Soaring Falcons|Soaring Falcons]]&nbsp;&nbsp;|&nbsp;&nbsp;[[Image:Ateneo colors.svg|9px|border]]&nbsp;[[Ateneo de Manila University|Ateneo]] [[Ateneo Blue Eagles|Blue Eagles]]&nbsp;&nbsp;|&nbsp;&nbsp;[[Image:FEU colors.svg|9px|border]]&nbsp;[[Far Eastern University|FEU]] [[FEU Tamaraws|Tamaraws]]<br />&nbsp;&nbsp;&nbsp;[[Image:NU colors.svg|9px|border]]&nbsp;[[National University (Philippines)|NU]] [[NU Bulldogs|Bulldogs]]&nbsp;&nbsp;|&nbsp;&nbsp;[[Image:San Beda colors.svg|9px|border]]&nbsp;[[University of the East|UE]] [[UE Red Warriors|Red Warriors]]&nbsp;&nbsp;|&nbsp;&nbsp;[[Image:UP colors.svg|9px|border]]&nbsp;[[University of the Philippines, Diliman|UP]] [[UP Fighting Maroons|Fighting Maroons]]&nbsp;&nbsp;|&nbsp;&nbsp;[[Image:UST colors.svg|9px|border]]&nbsp;[[University of Santo Tomas|UST]] [[UST Growling Tigers|Growling Tigers]]&nbsp;&nbsp;&nbsp;
 |- align="center" style="font-size: 90%;" |
-| ''Juniors:'' &nbsp;&nbsp;{{border|[[Image:Adamson colors.PNG|9px]]}}&nbsp;[[Adamson University|Adamson]] [[Adamson Soaring Falcons|Baby Falcons]]&nbsp;&nbsp;|&nbsp;&nbsp;{{border|[[Image:Ateneo colors.PNG|9px]]}}&nbsp;[[Ateneo de Manila University|Ateneo]] [[Ateneo Blue Eagles|Blue Eaglets]]&nbsp;&nbsp;|{{border|[[Image:FEU colors.PNG|9px]]}}&nbsp;[[Far Eastern University - Nicanor Reyes Educational Foundation|FEU-FERN]] [[FEU Tamaraws|Baby Tamaraws]]<br />&nbsp;&nbsp;&nbsp;{{border|[[Image:NU colors.PNG|9px]]}}&nbsp;[[National University (Philippines)|NU]] [[NU Bulldogs|Bullpups]]&nbsp;&nbsp;|&nbsp;&nbsp;{{border|[[Image:San Beda colors.PNG|9px]]}}&nbsp;[[University of the East|UE]] [[UE Red Warriors|Pages]]&nbsp;&nbsp;|&nbsp;&nbsp;{{border|[[Image:UP colors.PNG|9px]]}}&nbsp;[[University of the Philippines Integrated School|UPIS]] [[UP Fighting Maroons|Junior Maroons]]&nbsp;&nbsp;|&nbsp;&nbsp;{{border|[[Image:UST colors.PNG|9px]]}}&nbsp;[[University of Santo Tomas|UST]] [[UST Growling Tigers|Tiger Cubs]]&nbsp;&nbsp;&nbsp;
+| ''Juniors:'' &nbsp;&nbsp;[[Image:Adamson colors.svg|9px|border]]&nbsp;[[Adamson University|Adamson]] [[Adamson Soaring Falcons|Baby Falcons]]&nbsp;&nbsp;|&nbsp;&nbsp;[[Image:Ateneo colors.svg|9px|border]]&nbsp;[[Ateneo de Manila University|Ateneo]] [[Ateneo Blue Eagles|Blue Eaglets]]&nbsp;&nbsp;|[[Image:FEU colors.svg|9px|border]]&nbsp;[[Far Eastern University - Nicanor Reyes Educational Foundation|FEU-FERN]] [[FEU Tamaraws|Baby Tamaraws]]<br />&nbsp;&nbsp;&nbsp;[[Image:NU colors.svg|9px|border]]&nbsp;[[National University (Philippines)|NU]] [[NU Bulldogs|Bullpups]]&nbsp;&nbsp;|&nbsp;&nbsp;[[Image:San Beda colors.svg|9px|border]]&nbsp;[[University of the East|UE]] [[UE Red Warriors|Pages]]&nbsp;&nbsp;|&nbsp;&nbsp;[[Image:UP colors.svg|9px|border]]&nbsp;[[University of the Philippines Integrated School|UPIS]] [[UP Fighting Maroons|Junior Maroons]]&nbsp;&nbsp;|&nbsp;&nbsp;[[Image:UST colors.svg|9px|border]]&nbsp;[[University of Santo Tomas|UST]] [[UST Growling Tigers|Tiger Cubs]]&nbsp;&nbsp;&nbsp;
 |- align="center" style="font-size: 90%;" 
-| ''Mesuspindi:'' &nbsp;&nbsp;{{border|[[Image:La Salle colors.PNG|9px]]}}&nbsp;[[De La Salle University-Manila|De La Salle]] [[De La Salle Green Archers|Green Archers]] | {{border|[[Image:La Salle colors.PNG|9px]]}}&nbsp;[[De La Salle-Santiago Zobel School|DLSZ]] [[De La Salle Junior Archers|Junior Archers]]
+| ''Mesuspindi:'' &nbsp;&nbsp;[[Image:La Salle colors.svg|9px|border]]&nbsp;[[De La Salle University-Manila|De La Salle]] [[De La Salle Green Archers|Green Archers]] | [[Image:La Salle colors.svg|9px|border]]&nbsp;[[De La Salle-Santiago Zobel School|DLSZ]] [[De La Salle Junior Archers|Junior Archers]]
 |-style="font-size: 90%;" bgcolor=d3d3d3 align=center
 |[[:Category:University Athletics Association of the Philippines championships|Campeonatu]] | [[:Category:University Athletics Association of the Philippines seasons|Panaun ning Pyalung (Seasons)]]
 |}
-</center>
