--- a/Template:NCAAPhilippines.mw
+++ b/Template:NCAAPhilippines.mw
@@ -1,14 +1,12 @@
 <br clear=all>
-<center>
-{| class="toccolours" cellpadding="3"
+{| class="toccolours" cellpadding="3" style="margin:0 auto"
 |-
 | colspan="2;" align="center" style="font-size: 90%;" bgcolor="#ccccff" | {{Tnavbar-header|'''[[Ing National Collegiate Athletic Association (Filipinas)]]''' [[NCAA Season 83|Season 83]]|NCAAPhilippines}}
 |-
-| align="center" style="font-size: 90%;" |''Seniors:'' {{border|[[Image:Letran colors.PNG|9px]]}} [[Colegio de San Juan de Letran|Letran]] [[Letran Knights|Knights]] | {{border|[[Image:CSB colors.PNG|9px]]}} [[De La Salle-College of Saint Benilde|St. Benilde]] [[St. Benilde Blazers|Blazers]] | {{border|[[Image:NU colors.PNG|9px]]}} [[José Rizal University|JRU]] [[JRU Heavy Bombers|Heavy Bombers]] | {{border|[[Image:Mapua colors.PNG|9px]]}} [[Mapúa Institute of Technology|Mapúa]] [[Mapua Cardinals|Cardinals]]<BR>{{border|[[Image:PCU colors.PNG|9px]]}} [[Philippine Christian University|PCU]] [[PCU Dolphins|Dolphins]] | {{border|[[Image:San Beda colors.PNG|9px]]}} [[San Beda College|San Beda]] [[San Beda Red Lions|Red Lions]] | {{border|[[Image:SSC-R colors.PNG|9px]]}} [[San Sebastian College - Recoletos|San Sebastian]] [[San Sebastian Stags|Stags]] | {{border|[[Image:UPHD colors.PNG|9px]]}} [[University of Perpetual Help System DALTA|UPHSD]] [[UPHSD Altas|Altas]]
+| align="center" style="font-size: 90%;" |''Seniors:'' [[Image:Letran colors.PNG|9px|border]] [[Colegio de San Juan de Letran|Letran]] [[Letran Knights|Knights]] | [[Image:CSB colors.PNG|9px|border]] [[De La Salle-College of Saint Benilde|St. Benilde]] [[St. Benilde Blazers|Blazers]] | [[Image:NU colors.PNG|9px|border]] [[José Rizal University|JRU]] [[JRU Heavy Bombers|Heavy Bombers]] | [[Image:Mapua colors.PNG|9px|border]] [[Mapúa Institute of Technology|Mapúa]] [[Mapua Cardinals|Cardinals]]<BR>[[Image:PCU colors.PNG|9px|border]] [[Philippine Christian University|PCU]] [[PCU Dolphins|Dolphins]] | [[Image:San Beda colors.PNG|9px|border]] [[San Beda College|San Beda]] [[San Beda Red Lions|Red Lions]] | [[Image:SSC-R colors.PNG|9px|border]] [[San Sebastian College - Recoletos|San Sebastian]] [[San Sebastian Stags|Stags]] | [[Image:UPHD colors.PNG|9px|border]] [[University of Perpetual Help System DALTA|UPHSD]] [[UPHSD Altas|Altas]]
 |-
-| align="center" style="font-size: 90%;" |''Juniors:'' {{border|[[Image:Letran colors.PNG|9px]]}} [[Colegio de San Juan de Letran|Letran]] [[Letran Knights|Squires]] | {{border|[[Image:NU colors.PNG|9px]]}} [[José Rizal University|JRU]] [[JRU Heavy Bombers|Light Bombers]] {{border|[[Image:CSB colors.PNG|9px]]}} [[La Salle Green Hills|La Salle]] [[St. Benilde Blazers|Greenies]] | {{border|[[Image:PCU colors.PNG|9px]]}} [[Philippine Christian University|PCU Union]] [[PCU Dolphins|Baby Dolphins]]<BR>{{border|[[Image:San Beda colors.PNG|9px]]}} [[San Beda College|San Beda]] [[San Beda Red Lions|Red Cubs]] | {{border|[[Image:SSC-R colors.PNG|9px]]}} [[San Sebastian College - Recoletos|San Sebastian]] [[San Sebastian Stags|Staglets]] | {{border|[[Image:UPHD colors.PNG|9px]]}} [[University of Perpetual Help System DALTA|UPHSD]] [[UPHSD Altas|Altalettes]]<br />
+| align="center" style="font-size: 90%;" |''Juniors:'' [[Image:Letran colors.PNG|9px|border]] [[Colegio de San Juan de Letran|Letran]] [[Letran Knights|Squires]] | [[Image:NU colors.PNG|9px|border]] [[José Rizal University|JRU]] [[JRU Heavy Bombers|Light Bombers]] [[Image:CSB colors.PNG|9px|border]] [[La Salle Green Hills|La Salle]] [[St. Benilde Blazers|Greenies]] | [[Image:PCU colors.PNG|9px|border]] [[Philippine Christian University|PCU Union]] [[PCU Dolphins|Baby Dolphins]]<BR>[[Image:San Beda colors.PNG|9px|border]] [[San Beda College|San Beda]] [[San Beda Red Lions|Red Cubs]] |[[Image:SSC-R colors.PNG|9px|border]] [[San Sebastian College - Recoletos|San Sebastian]] [[San Sebastian Stags|Staglets]] | [[Image:UPHD colors.PNG|9px|border]] [[University of Perpetual Help System DALTA|UPHSD]] [[UPHSD Altas|Altalettes]]<br />
 
 |-
 | align="center" style="font-size: 90%;" |[[National Collegiate Athletic Association (Philippines) South|NCAA king Mawli (South)]] | [[List of NCAA Philippines seasons|Listaan da reng of panaun ning pyalung (seasons)]] | [[:Category:National Collegiate Athletic Association (Philippines) championships|Deng campeonatu]]
 |}
-</center>
