*Empty MediaWiki Message*

--- a/University_of_the_Philippines,_Manila.mw
+++ b/University_of_the_Philippines,_Manila.mw
@@ -1,5 +1,5 @@
 {{Infobox University
-|name = [[Image:UP logotype.png|300px]]|
+|name = [[Image:UP logotype.svg|300px]]|
 |native_name = '''Unibersidad ning Filipinas, Menila'''
 |image = <!-- Deleted image removed: [[Image:Unibersidad ng Pilipinas.png|200px]]  --><br> [[Image:UP Centennial Logo....jpg|center|150px|The Centennial Logo of UP]]
 |motto = Honor and Excellence (Dangalan ampong Kabiasnan)
