--- a/Bluetooth.mw
+++ b/Bluetooth.mw
@@ -1,5 +1,5 @@
 {{otheruses4|electronic protocol|king Ari ning Denmark aniang Edad Media|Harald I ning Denmark}}
-[[File:Bluetooth.png|thumb|300px|Ing logo ning Bluetooth.]]
+[[File:BluetoothLogo.svg|thumb|300px|Ing logo ning Bluetooth.]]
 Ing '''Bluetooth''' metung yang ''[[wireless]] protocol'' (sistemang alang kawad) para king pamaglibeng data kareng mangakuyad a distansia, bang maglalang [[personal area network]] (PAN). Aniang mumuna, aisip de antimong kayalili o kaliwas (''alternative'') kareng [[RS232]] data cable a e gagamat cabli o kawad. Agiu nong pituglung-tuglung deng mapilang kasangkapan o ''device'', ania malulutuas ing prublema ning ''synchronization'' (pamiagnan-agnan).  
 
 == Lon la murin deti ==
