--- a/Los_Altos,_California.mw
+++ b/Los_Altos,_California.mw
@@ -8,7 +8,7 @@
 |settlement_type          = [[Lakanbalen]]
 |motto                    = 
 <!-- images and maps  ----------->
-|image_skyline            = losaltosentrancesign2.jpg
+|image_skyline            = Los Altos entrance sign 2a.jpg
 |imagesize                = 
 |image_caption            = 
 |image_flag               = 
