*Empty MediaWiki Message*

--- a/Bam_Aquino.mw
+++ b/Bam_Aquino.mw
@@ -1,6 +1,6 @@
 {{Infobox Officeholder
 | name                = Paolo Benigno A. Aquino IV
-| image               = bamaquino.jpeg
+| image               = Bam Aquino.jpg
 | imagesize           = 
 | small
 | caption             =
