--- a/Michael_Phelps.mw
+++ b/Michael_Phelps.mw
@@ -1,7 +1,7 @@
 {{Other people}}{{pp-semi-blp|small=yes}}{{pp-move-indef}}
 {{Infobox swimmer
 | name           = Michael Phelps
-| image          = Phelps and busch.jpg
+| image          = Phelps 2009.jpg
 | image_size     = 
 | alt            =
 | caption        = I Michael Phelps, Abril 2009
