--- a/Long_Beach,_California.mw
+++ b/Long_Beach,_California.mw
@@ -4,7 +4,7 @@
 |image_skyline = Long Beach, CA at night.jpg|250px
 |image_flag =<!--LongBeach flag.jpg -->
 |image_seal =LongBeachLogo.jpg|90px
-|image_map = Long Beach in LA County map.png
+|image_map = LA County Incorporated Areas Long Beach highlighted.svg
 |map_caption = Location within [[Los Angeles County, California|Los Angeles County]] in the state of [[California]]
 |subdivision_type  = [[Countries of the world|Bangsa]]
 |subdivision_type1 = [[Political divisions of the United States|State]]
