--- a/Portal:Sharks.mw
+++ b/Portal:Sharks.mw
@@ -1,4 +1,4 @@
-{{portal|Sharks|Greyreefsharksmall2.jpg}}<noinclude>
+{{portal|Sharks|Tiburón.jpg}}<noinclude>
 [[Category:WikiProject Sharks Templates|Portal box]]
 [[Category:Wikipedia Portal navflags |{{PAGENAME}}]]
 </noinclude>
