--- a/Jan_Davis.mw
+++ b/Jan_Davis.mw
@@ -2,7 +2,7 @@
 {{for|those of a similar name|Janet Davies}}
 {{Infobox Astronaut
 | name = Nancy Jan Davis
-| image = jandavis.jpg
+| image = Jan Davis.jpg
 | type = Astronaut
 | nationality = [[United States|American]]
 | date_birth = {{birth date and age|mf=yes|1953|11|1}}
