Changing by free file

--- a/Rex_Stout.mw
+++ b/Rex_Stout.mw
@@ -1,6 +1,6 @@
 {{ infobox writer <!-- for more information see [[:Template:Infobox writer/doc]] --> 
 | name          = Rex Stout
-| image         = Rex Stout 1931.jpg<!-- FAIR USE of Rex Stout 1931.jpg: see image description page at http://en.wikipedia.org/wiki/Image:Rex Stout 1931.jpg for rationale -->
+| image         = Rex Stout 1975.jpg
 | imagesize     = 200
 | alt           = Portrait photograph of author Rex Stout at age 35, photographed by Arnold Genthe
 | caption       = I Rex Stout anyang 1931<br><small>Letratu neng [[Arnold Genthe]]</small>
