--- a/Rex_Stout.mw
+++ b/Rex_Stout.mw
@@ -1,7 +1,7 @@
 {{ infobox writer <!-- for more information see [[:Template:Infobox writer/doc]] --> 
 | name          = Rex Stout
 | image         = Rex Stout 1975.jpg
-| imagesize     = 200
+| imagesize     = 200px
 | alt           = Portrait photograph of author Rex Stout at age 35, photographed by Arnold Genthe
 | caption       = I Rex Stout anyang 1931<br><small>Letratu neng [[Arnold Genthe]]</small>
 | pseudonym     = 
