*Empty MediaWiki Message*

--- a/Chhattisgarh.mw
+++ b/Chhattisgarh.mw
@@ -30,7 +30,7 @@
 |footnotes =
 }}
 
-Ing '''Chhattisgarh''' ([[Chhattisgarhi (amanu)|Chhattisgarhi]]/[[Hindi]]: छत्तीसगढ़, {{IPA2|tʃʰət̪t̪iːsgəɽʰ}}) {{audio|Chattisgarh.ogg|pronunciation}}, metung yang [[Estadu ampong teritoriu ning India|estadu]] king kalibudtang [[India]], a mitikdo aniang megi lang makakawaning estadu deng labing-anam (16) a distritu king [[mauli]]-[[aslagan]] nang dake ning estadu ning [[Madhya Pradesh]] kanitang Noviembri 1, 2000. Ing [[Raipur]] ing kayang tungku (capitoliu o cabecera). Maki lapad yang 52,199 [[square mile|sq&nbsp;mi]] (135,194 km²), at kapulu yang pekamaragul a estadu ning India agpang king lapad. Ibat ne ing lagiu na kiaring 36 (ing ''chattis'', mangabaldugan yang "atlung pulu't anam" king [[Hindi]], at ing ''garh'', "kuta" ing buri nang sabian) a estadung mardika o ''princely state''  king labuad a iti manibat kanitang minuna pa, dapot ating e pamikasundu king bilang a 36.{{who}}
+Ing '''Chhattisgarh''' ([[Chhattisgarhi (amanu)|Chhattisgarhi]]/[[Hindi]]: छत्तीसगढ़, {{IPA2|tʃʰət̪t̪iːsgəɽʰ}}) {{audio|Chhattisgarh.oga|pronunciation}}, metung yang [[Estadu ampong teritoriu ning India|estadu]] king kalibudtang [[India]], a mitikdo aniang megi lang makakawaning estadu deng labing-anam (16) a distritu king [[mauli]]-[[aslagan]] nang dake ning estadu ning [[Madhya Pradesh]] kanitang Noviembri 1, 2000. Ing [[Raipur]] ing kayang tungku (capitoliu o cabecera). Maki lapad yang 52,199 [[square mile|sq&nbsp;mi]] (135,194 km²), at kapulu yang pekamaragul a estadu ning India agpang king lapad. Ibat ne ing lagiu na kiaring 36 (ing ''chattis'', mangabaldugan yang "atlung pulu't anam" king [[Hindi]], at ing ''garh'', "kuta" ing buri nang sabian) a estadung mardika o ''princely state''  king labuad a iti manibat kanitang minuna pa, dapot ating e pamikasundu king bilang a 36.{{who}}
 
 Makalele ya king [[Madhya Pradesh]] king [[pangulu]]-[[albugan]], [[Andhra Pradesh]] king [[mauli]], [[Orissa]] king [[aslagan]], [[Jharkhand]] king [[pangulu]]-[[aslagan]], ampong [[Uttar Pradesh]] king [[pangulu]].
 
