Changing by free file

--- a/University_of_Santo_Tomas.mw
+++ b/University_of_Santo_Tomas.mw
@@ -53,7 +53,7 @@ Mayayakit ya ing pipagaralan king distritu ning [[Sampaloc, Manila|Sampaloc]] ki
 Deng athletic team ning UST ila pin deng ''Growling Tigers'', a kayanib king [[University Athletic Association of the Philippines]] at maralas sasambut king the [[w:UAAP Overall Champions|Overall Championship]]. Kayabe la kareng kilalang Tomasino o miyari king UST deng [[santu]], pamuntuk ning [[Filipinas]], bayani, ampong pekapun king relihiun, a maki maulagang papil king amlat ning Filipinas. 
 
 ==Amlat==
-[[Image:UST main.jpg|right|150px|thumb|Ing UST Main building a mitalakad kanitang 1927]]
+[[Image:University of Santo Tomas.jpg|right|150px|thumb|Ing UST Main building a mitalakad kanitang 1927]]
 
 I Most Reverend Miguel de Benavides, O.P. ing kikilalanan dang talatátag ning unibersidad. Dinatang ya king Filipinas kayabe la reng minunang misionerung Dominicanu kanitang 1587. Ya ing meging obispu ning Nueva Segovia, at mitas ya antimong arsobispu ning Menila kanitang 1601. Kamate nang Fr. Benavides kanitang Julio 1605, pepamana ne ing kayang aklatan ampng pansariling pibandian a maki alagang libu limang dalan (1,500) a pesus a pondung bini para king pamitátag ning metung a institusion ning matas a pamagaral. Tikian nang Fr. Bernardo de Santa Catalina ing kayang penabilin, at menikua yang gusaling malapit king pisamban ampong kumbintung Dominicanu king [[Intramuros]] para king kolehiyu.
 
