--- a/Los_Angeles,_California.mw
+++ b/Los_Angeles,_California.mw
@@ -60,7 +60,7 @@ Ing Los Angeles mitatag ya inyang [[1781]], a tetag ning [[Spain|Kastilang]] gob
 
 [[File:LosAngeles-Plaza-1869.jpg|thumbnail|left|375px|Ing matuang plaza keng lakanbalen, 1869]]
 
-[[File:LA05.jpg|left|thumbnail|300px|[[Downtown Los Angeles]] mayayakit manibatan keng  [[Santa Ana Freeway]]]]
+[[File:Los Angeles from Santa Ana Freeway; 2005.jpg|left|thumbnail|300px|[[Downtown Los Angeles]] mayayakit manibatan keng  [[Santa Ana Freeway]]]]
 
 [[File:Viewfromsky.jpg||left|thumbnail|300px|Ing akakit king  [[Palos Verdes]] Telapulu kambe ning Los Angeles keng makarayu]]
 
