--- a/Champagne-Ardenne.mw
+++ b/Champagne-Ardenne.mw
@@ -19,7 +19,7 @@ arrondissements          = 15 |
 cantons                  = 146 |
 communes                 = 1,947 |
 departments             = [[Aube]]<br />[[Ardennes (department)|Ardennes]]<br />[[Haute-Marne]]<br />[[Marne]] |
-image_map                = Carte Localisation Région France Champagne-Ardenne.png |
+image_map                = Champagne-Ardenne map.png |
 footnotes=|
 |}}
 Ing '''Champagne-Ardenne''' metung ya kareng 26 a [[regions of France|labuad]] ning [[France]].
