([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Imperial County, California.jpg]] → [[File:Seal of Imperial County, California.jpg]]

--- a/Imperial_County,_California.mw
+++ b/Imperial_County,_California.mw
@@ -1,7 +1,7 @@
 {{Infobox U.S. County|
  county  = Imperial County|
  state = California |
- seal = Imperial County, California.jpg |
+ seal = Seal of Imperial County, California.jpg |
  map = California map showing Imperial County.png|
  map size = 250 |
  founded = [[1907]]|
