Changing by free file

--- a/San_Beda_College.mw
+++ b/San_Beda_College.mw
@@ -33,12 +33,11 @@ Metung yang kayanib a talatátag king Philippine Accrediting Association of Scho
 
 ==Pasilidad==
 
-[[Image:St Placids.jpg|200px|thumb|Kilub ning St. Placid's Sports Complex]]
+[[Image:PCCL 2010 Quarterfinals- De La Salle Green Archers vs. San Beda Red Lions, Nov. 29, 2010-008.jpg|200px|thumb|Kilub ning St. Placid's Sports Complex]]
 
 Dirinan nang ulaga ning planu ning eskuela ing pangamagamitan (functionality) ampo ing sintingan (aesthetics). Gagamitan nang ustu ning eskuela ing espasiu, at makasadia ya kareng kuartung miyayaliwa gamit (multi-purpose rooms). Atin yang aduang air-conditioning unit ing balang kuartung pipagaralan (classroom), overhead projector. Maki overhead projector, LCD projector ampong white screen ing balang kuartu. Atin muring Conference Hall (Siduan a Pulungan) a laganas a maka air-condition at masala. Kayabe la kareng pasilidad a pang-pasiknangan (sports facilities) deng St. Placid's Sports Complex, senior football field, physical fitness room, ampong swimming pool. 
 
 Atin yang apat yang aklatan, apat a laboratoriung siensia, anam a laboratoriung pang-computer, metung a klinikang medical ampong dental, metung a football field, aduang swimming pool, metung a quadrangle nung nu mikakapapamitipun neng abak ampong pangayari (graduation), aduang kantina ampong metung a tindahan libru ing San Beda College.
-
 
 ==Suglung palual==
 * [http://www.sanbeda.edu.ph/ San Beda College] Official Website
