--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -1,8 +1,231 @@
-{{country data {{{1}}} 
-| country flagcountry2
-| countryname = {{{1}}}
-| variant = {{{2|}}}
-| size = {{{size|}}}
-| name = {{{name|}}} 
-}}<noinclude>{{/doc}}
-{{hprotected}}</noinclude>
+{{#switch:{{{1|}}}
+|ADO = Flag of the United States Virgin Islands.svg
+|AFG = Flag of Afghanistan.svg
+|ALB = Flag of Albania.svg
+|ALŽ = Flag of Algeria.svg
+|AMS = Flag of the United States Virgin Islands.svg
+|AND = Flag of Andorra.svg
+|ANG = Flag of Angola.svg
+|ANV = Flag of Anguilla.svg
+|ARG = Flag of Argentina.svg
+|ARM = Flag of Armenia.svg
+|ARU = Flag of Aruba.svg
+|ATG = Flag of Antigua and Barbuda.svg
+|AUS = Flag of Australia.svg
+|AUT = Flag of Austria.svg
+|AZE = Flag of Azerbaijan.svg
+|BAH = Flag of the Bahamas.svg
+|BAN = Flag of Bangladesh.svg
+|BAR = Flag of Barbados.svg
+|BEL = Flag of Belgium.svg
+|BEN = Flag of Benin.svg
+|BER = Flag of Bermuda.svg
+|BIH = Flag of Bosnia and Herzegovina.svg
+|BHR = Flag of Bahrain.svg
+|BJE = Flag of Belarus.svg
+|BLZ = Flag of Belize.svg
+|BOC = Flag of Botswana.svg
+|BOL = Flag of Bolivia.svg
+|BRA = Flag of Brazil.svg
+|BRIT DJEV = Flag of the British Virgin Islands.svg
+|BRU = Flag of Brunei.svg
+|BUF = Flag of Burkina Faso.svg
+|BUG = Flag of Bulgaria.svg
+|BUR = Flag of Burundi.svg
+|BUT = Flag of Bhutan.svg
+|CG = Flag of Montenegro.svg
+|CIP = Flag of Cyprus.svg
+|CIV = Flag of Cote d'Ivoire.svg
+|ČAD = Flag of Chad.svg
+|ČEŠ = Flag of the Czech Republic.svg
+|ČIL = Flag of Chile.svg
+|ČSSR = Flag of the Czech Republic.svg
+|DAN = Flag of Denmark.svg
+|DDR = Flag of East Germany.svg
+|DMN = Flag of Dominica.svg
+|DOM = Flag of the Dominican Republic.svg
+|DR KONGO = Flag of the Democratic Republic of the Congo.svg
+|DRK = Flag of the Democratic Republic of the Congo.svg
+|DŽI = Flag of Djibouti.svg
+|EGI = Flag of Egypt.svg
+|EKG = Flag of Equatorial Guinea.svg
+|EKV = Flag of Ecuador.svg
+|ENG = Flag of England.svg
+|ERI = Flag of Eritrea.svg
+|EST = Flag of Estonia.svg
+|ETI = Flag of Ethiopia.svg
+|FAR = Flag of the Faroe Islands.svg
+|FIĐ = Flag of Fiji.svg
+|FIL = Flag of the Philippines.svg
+|FIN = Flag of Finland.svg
+|FRA = Flag of France.svg
+|FR GIJ = Flag of France.svg
+|GAB = Flag of Gabon.svg
+|GAM = Flag of The Gambia.svg
+|GAN = Flag of Ghana.svg
+|GIB = Flag of Gibraltar.svg
+|GRE = Flag of Grenada.svg
+|GRU = Flag of Georgia.svg
+|GRČ = Flag of Greece.svg
+|GUAM = Flag of Guam.svg
+|GUA = Flag of Guatemala.svg
+|GVA = Flag of Guyana.svg
+|GVAD = Flag of Guadeloupe.svg
+|GVB = Flag of Guinea-Bissau.svg
+|GVI = Flag of Guinea.svg
+|HAI = Flag of Haiti.svg
+|HK = Flag of Hong Kong.svg
+|HON = Flag of Honduras.svg
+|HRV = Flag of Croatia.svg
+|IND = Flag of India.svg
+|INDN = Flag of Indonesia.svg
+|IRK = Flag of Iraq.svg
+|IRN = Flag of Iran.svg
+|IRS = Flag of Ireland.svg
+|ISL = Flag of Iceland.svg
+|IST T = Flag of East Timor.svg
+|ITA = Flag of Italy.svg
+|IZR = Flag of Israel.svg
+|JAM = Flag of Jamaica.svg
+|JEM = Flag of Yemen.svg
+|JAP = Flag of Japan.svg
+|JAR = Flag of South Africa.svg
+|JKO = Flag of South Korea.svg
+|JOR = Flag of Jordan.svg
+|JUG = Flag of SFR Yugoslavia.svg
+|JUGK = Flag of the Kingdom of Yugoslavia.svg
+|KAJ = Flag of the Cayman Islands.svg
+|KAM = Flag of Cameroon.svg
+|KAN = Flag of Canada.svg
+|KAT = Flag of Qatar.svg
+|KATL = Flag of Catalonia.svg
+|KAZ = Flag of Kazakhstan.svg
+|KEN = Flag of Kenya.svg
+|KIN = Flag of the People's Republic of China.svg
+|KIR = Flag of Kyrgyzstan.svg
+|KMB = Flag of Cambodia.svg
+|KOL = Flag of Colombia.svg
+|KOM = Flag of the Comoros.svg
+|KOS = Flag of Costa Rica.svg
+|KSV = Flag of Kosovo.svg
+|KUB = Flag of Cuba.svg
+|KUK = Flag of the Cook Islands.svg
+|KUV = Flag of Kuwait.svg
+|LAO = Flag of Laos.svg
+|LAT = Flag of Latvia.svg
+|LBN = Flag of Lebanon.svg
+|LBR = Flag of Liberia.svg
+|LES = Flag of Lesotho.svg
+|LIB = Flag of Libya.svg
+|LIH = Flag of Liechtenstein.svg
+|LIT = Flag of Lithuania.svg
+|LUX = Flag of Luxembourg.svg
+|MAD = Flag of Madagascar.svg
+|MAK = Flag of Macedonia.svg
+|MLT = Flag of Malta.svg
+|MLV = Flag of Malawi.svg
+|MAĐ = Flag of Hungary.svg
+|MALD = Flag of Maldives.svg
+|MALE = Flag of Malaysia.svg
+|MALI = Flag of Mali.svg
+|MARŠ = Flag of the Marshall Islands.svg
+|MART = Flag of Martinique.svg  
+|MAR = Flag of Morocco.svg
+|MAO = Flag of Macau.svg
+|MAU = Flag of Mauritania.svg
+|MAUS = Flag of Mauritius.svg
+|MEX = Flag of Mexico.svg
+|MIA = Flag of Myanmar.svg
+|MNG = Flag of Mongolia.svg
+|MOL = Flag of Moldova.svg
+|MONT = Flag of Montserrat.svg
+|MOZ = Flag of Mozambique.svg
+|NAM = Flag of Namibia.svg
+|NDH = Flag of Independent State of Croatia.svg
+|NEP = Flag of Nepal.svg
+|NGR = Flag of Niger.svg
+|NIG = Flag of Nigeria.svg
+|NIK = Flag of Nicaragua.svg
+|NIZ = Flag of the Netherlands.svg
+|NIZ ANT = Flag of the Netherlands Antilles.svg
+|NJE = Flag of Germany.svg
+|NOR = Flag of Norway.svg
+|NZL = Flag of New Zealand.svg
+|OMA = Flag of Oman.svg
+|OTC = Flag of the Turks and Caicos Islands.svg
+|OVČ = Flag of the Faroe Islands.svg
+|PAK = Flag of Pakistan.svg
+|PAL = Flag of Palestine.svg
+|PAN = Flag of Panama.svg
+|PAR = Flag of Paraguay.svg
+|PER = Flag of Peru.svg
+|PNG = Flag of Papua New Guinea.svg
+|POLJ = Flag of Poland.svg
+|POR = Flag of Portugal.svg
+|PUE = Flag of Puerto Rico.svg
+|RKO = Flag of the Republic of the Congo.svg
+|RUA = Flag of Rwanda.svg
+|RUM = Flag of Romania.svg
+|RUS = Flag_of_Russia.svg
+|SAD = Flag of the United States.svg
+|SAL = Flag of El Salvador.svg
+|SAM = Flag of Samoa.svg
+|SAU = Flag of Saudi Arabia.svg
+|SEJ = Flag of the Seychelles.svg
+|SEN = Flag of Senegal.svg
+|S LEO = Flag of Sierra Leone.svg
+|SIN = Flag of Singapore.svg
+|SIR = Flag of Syria.svg
+|SCG = Flag of Serbia and Montenegro.svg
+|SJI = Flag of Northern Ireland.svg
+|SJKOR = Flag of North Korea.svg
+|SLK = Flag of Slovakia.svg
+|SLO = Flag of Slovenia.svg
+|SMR = Flag of San Marino.svg
+|SOL = Flag of the Solomon Islands.svg
+|SOM = Flag of Somalia.svg
+|SRB = Flag of Serbia.svg
+|SRH = Flag_of_SR_Croatia.svg
+|SSSR = Flag of the Soviet Union.svg
+|SAR = Flag of the Central African Republic.svg
+|SVA = Flag of Swaziland.svg
+|SV LUC = Flag of Saint Lucia.svg
+|SV KIN = Flag of Saint Kitts and Nevis.svg
+|SV TIP = Flag of Sao Tome and Principe.svg
+|SV VIG = Flag of Saint Vincent and the Grenadines.svg
+|SUD = Flag of Sudan.svg
+|SUR = Flag of Suriname.svg
+|ŠKO = Flag of Scotland.svg
+|ŠPA = Flag of Spain.svg
+|ŠVE = Flag of Sweden.svg
+|ŠRI = Flag of Sri Lanka.svg
+|ŠVI = Flag of Switzerland.svg
+|TADŽ = Flag of Tajikistan.svg
+|FR POLI = Flag of French Polynesia.svg
+|TAH = Flag of French Polynesia.svg
+|TAJ = Flag of Thailand.svg
+|TAJV = Flag of the Republic of China.svg
+|TAN = Flag of Tanzania.svg
+|TOG = Flag of Togo.svg
+|TON = Flag of Tonga.svg
+|TRI = Flag of Trinidad and Tobago.svg
+|TUN = Flag of Tunisia.svg
+|TKM = Flag of Turkmenistan.svg
+|TUR = Flag of Turkey.svg
+|TUV = Flag of Tuvalu.svg
+|UAE = Flag of the United Arab Emirates.svg
+|UGA = Flag of Uganda.svg
+|UKR = Flag of Ukraine.svg
+|URU = Flag of Uruguay.svg
+|UZB = Flag of Uzbekistan.svg
+|VAN = Flag of Vanuatu.svg
+|VEN = Flag of Venezuela.svg
+|VIJ = Flag of Vietnam.svg
+|WAL = Flag of Wales 2.svg
+|WIF = Flag of Wallis and Futuna.svg
+|ZAM = Flag of Zambia.svg
+|ZEL = Flag of Cape Verde.svg
+|ZIM = Flag of Zimbabwe.svg
+|#default = Flag of None.svg
+}}<noinclude>
+</noinclude>
