--- a/Template:Bandera.mw
+++ b/Template:Bandera.mw
@@ -1,8 +1,3 @@
-{{country data {{{1|}}}
-| country flag2
-| countryname = {{{1|}}}
-| variant = {{{2|}}}
-| size = {{{size|}}}
-| name = {{{name|}}} 
-}}<noinclude>{{/doc}}
+[[File:{{Flagcountry|{{{1|}}}}}|border|23px]] {{Country|{{{1|}}}}}
+<noinclude>
 </noinclude>
