--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -1,5 +1,231 @@
-{{country_{{{1}}}|{{{2}}}|{{{2}}}|size={{{size|}}}|name={{{name|}}}}}<noinclude>
-{{protected template}}
-{{{{FULLPAGENAME}}/doc}}
-<!-- Add cats and interwikis to the /doc subpage, not here! -->
+{{#switch:{{{1|}}}
+|ADO = [[United States Virgin Islands]]
+|AFG = [[Afghanistan]]
+|ALB = [[Albania]]
+|ALŽ = [[Algeria]]
+|AMS = [[United States Virgin Islands]]
+|AND = [[Andorra]]
+|ANG = [[Angola]]
+|ANV = [[Anguilla]]
+|ARG = [[Argentina]]
+|ARM = [[Armenia]]
+|ARU = [[Aruba]]
+|ATG = [[Antigua and Barbuda]]
+|AUS = [[Australia]]
+|AUT = [[Austria]]
+|AZE = [[Azerbaijan]]
+|BAH = [[Bahamas]]
+|BAN = [[Bangladesh]]
+|BAR = [[Barbados]]
+|BEL = [[Belgium]]
+|BEN = [[Benin]]
+|BER = [[Bermuda]]
+|BIH = [[Bosnia and Herzegovina]]
+|BHR = [[Bahrain]]
+|BJE = [[Belarus]]
+|BLZ = [[Belize]]
+|BOC = [[Botswana]]
+|BOL = [[Bolivia]]
+|BRA = [[Brazil]]
+|BRIT DJEV = [[British Virgin Islands]]
+|BRU = [[Brunei]]
+|BUF = [[Burkina Faso]]
+|BUG = [[Bulgaria]]
+|BUR = [[Burundi]]
+|BUT = [[Bhutan]]
+|CG = [[Montenegro]]
+|CIP = [[Cyprus]]
+|CIV = [[Cote d'Ivoire]]
+|ČAD = [[Chad]]
+|ČEŠ = [[Czech Republic]]
+|ČIL = [[Chile]]
+|ČSSR = [[Czech Republic]]
+|DAN = [[Denmark]]
+|DDR = [[East Germany]]
+|DMN = [[Dominica]]
+|DOM = [[Dominican Republic]]
+|DR KONGO = [[Democratic Republic of the Congo]]
+|DRK = [[Democratic Republic of the Congo]]
+|DŽI = [[Djibouti]]
+|EGI = [[Egypt]]
+|EKG = [[Equatorial Guinea]]
+|EKV = [[Ecuador]]
+|ENG = [[England]]
+|ERI = [[Eritrea]]
+|EST = [[Estonia]]
+|ETI = [[Ethiopia]]
+|FAR = [[Faroe Islands]]
+|FIĐ = [[Fiji]]
+|FIL = [[Philippines]]
+|FIN = [[Finland]]
+|FRA = [[France]]
+|FR GIJ = [[France]]
+|GAB = [[Gabon]]
+|GAM = [[The Gambia]]
+|GAN = [[Ghana]]
+|GIB = [[Gibraltar]]
+|GRE = [[Grenada]]
+|GRU = [[Georgia]]
+|GRČ = [[Greece]]
+|GUAM = [[Guam]]
+|GUA = [[Guatemala]]
+|GVA = [[Guyana]]
+|GVAD = [[Guadeloupe]]
+|GVB = [[Guinea-Bissau]]
+|GVI = [[Guinea]]
+|HAI = [[Haiti]]
+|HK = [[Hong Kong]]
+|HON = [[Honduras]]
+|HRV = [[Croatia]]
+|IND = [[India]]
+|INDN = [[Indonesia]]
+|IRK = [[Iraq]]
+|IRN = [[Iran]]
+|IRS = [[Ireland]]
+|ISL = [[Iceland]]
+|IST T = [[East Timor]]
+|ITA = [[Italy]]
+|IZR = [[Israel]]
+|JAM = [[Jamaica]]
+|JEM = [[Yemen]]
+|JAP = [[Japan]]
+|JAR = [[South Africa]]
+|JKO = [[South Korea]]
+|JOR = [[Jordan]]
+|JUG = [[SFR Yugoslavia]]
+|JUGK = [[Kingdom of Yugoslavia]]
+|KAJ = [[Cayman Islands]]
+|KAM = [[Cameroon]]
+|KAN = [[Canada]]
+|KAT = [[Qatar]]
+|KATL = [[Catalonia]]
+|KAZ = [[Kazakhstan]]
+|KEN = [[Kenya]]
+|KIN = [[People's Republic of China]]
+|KIR = [[Kyrgyzstan]]
+|KMB = [[Cambodia]]
+|KOL = [[Colombia]]
+|KOM = [[Comoros]]
+|KOS = [[Costa Rica]]
+|KSV = [[Kosovo]]
+|KUB = [[Cuba]]
+|KUK = [[Cook Islands]]
+|KUV = [[Kuwait]]
+|LAO = [[Laos]]
+|LAT = [[Latvia]]
+|LBN = [[Lebanon]]
+|LBR = [[Liberia]]
+|LES = [[Lesotho]]
+|LIB = [[Libya]]
+|LIH = [[Liechtenstein]]
+|LIT = [[Lithuania]]
+|LUX = [[Luxembourg]]
+|MAD = [[Madagascar]]
+|MAK = [[Macedonia]]
+|MLT = [[Malta]]
+|MLV = [[Malawi]]
+|MAĐ = [[Hungary]]
+|MALD = [[Maldives]]
+|MALE = [[Malaysia]]
+|MALI = [[Mali]]
+|MARŠ = [[Marshall Islands]]
+|MART = [[Martinique]]  
+|MAR = [[Morocco]]
+|MAO = [[Macau]]
+|MAU = [[Mauritania]]
+|MAUS = [[Mauritius]]
+|MEX = [[Mexico]]
+|MIA = [[Myanmar]]
+|MNG = [[Mongolia]]
+|MOL = [[Moldova]]
+|MONT = [[Montserrat]]
+|MOZ = [[Mozambique]]
+|NAM = [[Namibia]]
+|NDH = [[Independent State of Croatia]]
+|NEP = [[Nepal]]
+|NGR = [[Niger]]
+|NIG = [[Nigeria]]
+|NIK = [[Nicaragua]]
+|NIZ = [[Netherlands]]
+|NIZ ANT = [[Netherlands Antilles]]
+|NJE = [[Germany]]
+|NOR = [[Norway]]
+|NZL = [[New Zealand]]
+|OMA = [[Oman]]
+|OTC = [[Turks and Caicos Islands]]
+|OVČ = [[Faroe Islands]]
+|PAK = [[Pakistan]]
+|PAL = [[Palestine]]
+|PAN = [[Panama]]
+|PAR = [[Paraguay]]
+|PER = [[Peru]]
+|PNG = [[Papua New Guinea]]
+|POLJ = [[Poland]]
+|POR = [[Portugal]]
+|PUE = [[Puerto Rico]]
+|RKO = [[Republic of the Congo]]
+|RUA = [[Rwanda]]
+|RUM = [[Romania]]
+|RUS = [[Russia]]
+|SAD = [[United States]]
+|SAL = [[El Salvador]]
+|SAM = [[Samoa]]
+|SAU = [[Saudi Arabia]]
+|SEJ = [[Seychelles]]
+|SEN = [[Senegal]]
+|S LEO = [[Sierra Leone]]
+|SIN = [[Singapore]]
+|SIR = [[Syria]]
+|SCG = [[Serbia and Montenegro]]
+|SJI = [[Northern Ireland]]
+|SJKOR = [[North Korea]]
+|SLK = [[Slovakia]]
+|SLO = [[Slovenia]]
+|SMR = [[San Marino]]
+|SOL = [[Solomon Islands]]
+|SOM = [[Somalia]]
+|SRB = [[Serbia]]
+|SRH = [[SR Croatia]]
+|SSSR = [[Soviet Union]]
+|SAR = [[Central African Republic]]
+|SVA = [[Swaziland]]
+|SV LUC = [[Saint Lucia]]
+|SV KIN = [[Saint Kitts and Nevis]]
+|SV TIP = [[Sao Tome and Principe]]
+|SV VIG = [[Saint Vincent and the Grenadines]]
+|SUD = [[Sudan]]
+|SUR = [[Suriname]]
+|ŠKO = [[Scotland]]
+|ŠPA = [[Spain]]
+|ŠVE = [[Sweden]]
+|ŠRI = [[Sri Lanka]]
+|ŠVI = [[Switzerland]]
+|TADŽ = [[Tajikistan]]
+|FR POLI = [[French Polynesia]]
+|TAH = [[French Polynesia]]
+|TAJ = [[Thailand]]
+|TAJV = [[Republic of China]]
+|TAN = [[Tanzania]]
+|TOG = [[Togo]]
+|TON = [[Tonga]]
+|TRI = [[Trinidad and Tobago]]
+|TUN = [[Tunisia]]
+|TKM = [[Turkmenistan]]
+|TUR = [[Turkey]]
+|TUV = [[Tuvalu]]
+|UAE = [[United Arab Emirates]]
+|UGA = [[Uganda]]
+|UKR = [[Ukraine]]
+|URU = [[Uruguay]]
+|UZB = [[Uzbekistan]]
+|VAN = [[Vanuatu]]
+|VEN = [[Venezuela]]
+|VIJ = [[Vietnam]]
+|WAL = [[Wales]]
+|WIF = [[Wallis and Futuna]]
+|ZAM = [[Zambia]]
+|ZEL = [[Cape Verde]]
+|ZIM = [[Zimbabwe]]
+|#default = ???
+}}<noinclude>
 </noinclude>
